sites and project master mutable
